--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-	body{margin: 0; padding: 0;}
-	header{background-color: #FF0000; height: 70px; width: 100%;}
-	footer{background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;}
+		<style>
+		body{margin: 0; padding: 0;}
+		header{background-color: #FF0000; height: 70px; width: 100%;}
+		footer{background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;}
+		</style>
  	</head>
 
  	<body>
