--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
         <head>
+		<title>HTML programmming</title>
 		<link rel="stylesheet" href="styles/3-common.css">
 		<link rel="stylesheet" href="styles/3-header.css">
 		<link rel="stylesheet" href="styles/3-footer.css">
