--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>HTML programmming</title>
 		<link rel="stylesheet" href="styles/2-common.css">
 		<link rel="stylesheet" href="styles/2-header.css">
 		<link rel="stylesheet" href="styles/2-footer.css">
