--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>HTML programmming</title>
 		<link rel="stylesheet" href="styles/4-common.css">
 		<link rel="stylesheet" href="styles/3-header.css">
 		<link rel="stylesheet" href="styles/3-footer.css">
 		<link rel="stylesheet" href="styles/4-filters.css">
 		<link rel="icon" href="images/icon.png">
 	</head>
-
 	<body>
 		<header>
 			<div class="logo">
