--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -41,10 +41,10 @@
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen...</h4>
 					<ul class="popover">
-						<ul>Internet</ul>
-						<ul>TV</ul>
-						<ul>Kitchen</ul>
-						<ul>Iron</ul>
+						<li>Internet</li>
+						<li>TV</li>
+						<li>Kitchen</li>
+						<li>Iron</li>
 					</ul>
 				</div>
 			</section>
