--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -58,7 +58,7 @@
 					<article>
 						<div class="price_title">
 							<div class="article_title">
-								<h2>My home</h2>
+								<h2>#####</h2>
 							</div>
 							<div class="price_by_night">
 								<div class="price">###</div>
@@ -67,13 +67,24 @@
 						<div class="information">
 							<div class="max_guest">
                             					<div class="guest_icon"></div>
- 									<div class="guest_number">
-										<h2>######</h2>
-									</div>
+ 								<div class="guest_number">
+									<h2>######</h2>
+								</div>
 							</div>
 
+							<div class="number_rooms">
+                            					<div class="room_icon"></div>
+ 								<div class="room_number">
+									<h2>######</h2>
+								</div>
+							</div>
 
-
+							<div class="number_bathrooms">
+                            					<div class="bathroom_icon"></div>
+ 								<div class="bathroom_number">
+									<h2>######</h2>
+								</div>
+							</div>
 						</div>
 					</article>
 					<article>
