--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -86,6 +86,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="user"><b>Owner:</b> John Lennon</div>
+						<div class="description">Desciption of the house</div>
 					</article>
 
 					<article>
@@ -119,6 +121,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="user"><b>Owner:</b> John Lennon</div>
+						<div class="description">Desciption of the house</div>
 					</article>
 
 					<article>
@@ -152,6 +156,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="user"><b>Owner:</b> John Lennon</div>
+						<div class="description">Desciption of the house</div>
 					</article>
 				</div>
 			</section>	
