--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -58,106 +58,106 @@
 					<article>
 						<div class="price_title">
 							<div class="article_title">
-								<h2>#####</h2>
+								<h2>My home</h2>
 							</div>
 							<div class="price_by_night">
-								<div class="price">###</div>
+								<div class="price">80$</div>
 							</div>
 						</div>
 						<div class="information">
 							<div class="max_guest">
                             					<div class="guest_icon"></div>
  								<div class="guest_number">
-									<h2>######</h2>
+									<h2>2 Guests</h2>
 								</div>
 							</div>
 
 							<div class="number_rooms">
                             					<div class="room_icon"></div>
  								<div class="room_number">
-									<h2>######</h2>
+									<h2>1 Bedroom</h2>
 								</div>
 							</div>
 
 							<div class="number_bathrooms">
                             					<div class="bathroom_icon"></div>
  								<div class="bathroom_number">
-									<h2>######</h2>
+									<h2>1 Bathroom</h2>
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b> John Lennon</div>
-						<div class="description">Desciption of the house</div>
+						<div class="user"><b>Owner:</b> The owner of the site</div>
+						<div class="description">This house can be rented for a couple</div>
 					</article>
 
 					<article>
 						<div class="price_title">
 							<div class="article_title">
-								<h2>#####</h2>
+								<h2>Tiny house</h2>
 							</div>
 							<div class="price_by_night">
-								<div class="price">###</div>
+								<div class="price">$65</div>
 							</div>
 						</div>
 						<div class="information">
 							<div class="max_guest">
                             					<div class="guest_icon"></div>
  								<div class="guest_number">
-									<h2>######</h2>
+									<h2>4 Guests</h2>
 								</div>
 							</div>
 
 							<div class="number_rooms">
                             					<div class="room_icon"></div>
  								<div class="room_number">
-									<h2>######</h2>
+									<h2>2 Bedrooms</h2>
 								</div>
 							</div>
 
 							<div class="number_bathrooms">
                             					<div class="bathroom_icon"></div>
  								<div class="bathroom_number">
-									<h2>######</h2>
+									<h2>1 Bathroom</h2>
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b> John Lennon</div>
-						<div class="description">Desciption of the house</div>
+						<div class="user"><b>Owner:</b>Mohammed</div>
+						<div class="description">This house can be rented for a family</div>
 					</article>
 
 					<article>
 						<div class="price_title">
 							<div class="article_title">
-								<h2>#####</h2>
+								<h2>A suite</h2>
 							</div>
 							<div class="price_by_night">
-								<div class="price">###</div>
+								<div class="price">$190</div>
 							</div>
 						</div>
 						<div class="information">
 							<div class="max_guest">
                             					<div class="guest_icon"></div>
  								<div class="guest_number">
-									<h2>######</h2>
+									<h2>8 guests</h2>
 								</div>
 							</div>
 
 							<div class="number_rooms">
                             					<div class="room_icon"></div>
  								<div class="room_number">
-									<h2>######</h2>
+									<h2>4 bedrooms</h2>
 								</div>
 							</div>
 
 							<div class="number_bathrooms">
                             					<div class="bathroom_icon"></div>
  								<div class="bathroom_number">
-									<h2>######</h2>
+									<h2>2 bathrooms</h2>
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b> John Lennon</div>
-						<div class="description">Desciption of the house</div>
+						<div class="user"><b>Owner:</b>Salah</div>
+						<div class="description">This house can be rented for a party</div>
 					</article>
 				</div>
 			</section>	
