--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -86,7 +86,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b> The owner of the site</div>
+						<div class="user"><b>Owner:</b> Mohammed Salah</div>
 						<div class="description">This house can be rented for a couple</div>
 					</article>
 
@@ -121,7 +121,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b>Mohammed</div>
+						<div class="user"><b>Owner:</b> Mohammed</div>
 						<div class="description">This house can be rented for a family</div>
 					</article>
 
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="user"><b>Owner:</b>Salah</div>
+						<div class="user"><b>Owner:</b> Salah</div>
 						<div class="description">This house can be rented for a party</div>
 					</article>
 				</div>
